[package]
name = "chapter-01-hellorust"
version = "0.1.0"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# NOTE(DP): Build fix (2022-01-03)
#           - https://github.com/amethyst/rustrogueliketutorial/issues/166#issuecomment-872348864
#           - https://github.com/amethyst/bracket-lib/issues/301#issuecomment-1272312136
rltk = { git = "https://github.com/amethyst/bracket-lib" }
