[package]
name = "roguelike-tutorial"
version = "0.1.0"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-integer = "0.1"
# NOTE(DP): Build fix (2022-01-03)
#           https://github.com/amethyst/bracket-lib/issues/318#issuecomment-1359687927
rltk = { version = "~0.8", features = ["webgpu", "serde"], default-features = false }
specs = { version = "0.18.0", features = ["serde"] }
specs-derive = "0.4.1"
serde = { version = "1.0.93", features = ["derive"] }
serde_json = "1.0.39"
